Functional model of groups, but yet without stats

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,7 +19,15 @@
     <h2>Preference</h2>
     <div id="preferences"></div>
 
-    <h2>Skupinky - todo</h2>
+    <h2>Skupinky</h2>
+    <div id="unsorted" class="group"></div>
+    <div id="groups"></div>
 
+    <h2>Statistiky</h2>
+    Todo celkové skóre
+    Celkový průměr
+    Zbarvit červeně účastníky, kteří nemají nikoho ve stejné skupince.
+
+    <script src="script.js"></script>
 </body>
 </html>
